--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghost-express-router",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "nodejs express router to handle authorization and permissioning for ghost express apps",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.0",
     "bluebird": "^3.4.6",
     "config": "^1.24.0",
+    "connect-sequence": "^1.3.0",
     "express": "^4.14.0",
     "express-winston": "^1.3.1",
     "ghost-express-route-request-validator": "^1.0.6",
