--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "config": "^1.24.0",
     "connect-sequence": "^1.3.0",
     "express": "^4.14.0",
+    "express-boom": "^2.0.0",
+    "express-joi": "^0.3.1",
     "express-winston": "^1.3.1",
-    "ghost-express-route-request-validator": "^1.0.6",
-    "http-responses": "0.0.5",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
