--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.0",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "celebrate": "^4.0.1",
     "config": "^1.24.0",
     "connect-sequence": "^1.3.0",
     "express": "^4.14.0",
     "express-boom": "^2.0.0",
-    "express-joi": "^0.3.1",
     "express-winston": "^1.3.1",
+    "joi": "^10.1.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
@@ -35,7 +37,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chance": "^1.0.4",
+    "chance": "^1.0.4npm ",
     "ghost-express-server": "^1.0.14",
     "ghost-sequelize": "^1.0.2",
     "mocha": "^3.1.2",
