--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.14.0",
     "express-boom": "^2.0.0",
     "express-winston": "^1.3.1",
+    "ghost-logger": "^1.1.1",
     "joi": "^10.1.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
