--- a/package.json
+++ b/package.json
@@ -24,22 +24,20 @@
     "connect-sequence": "^1.3.0",
     "express": "^4.14.0",
     "express-boom": "^2.0.0",
+    "express-joi": "^0.3.1",
     "express-winston": "^1.3.1",
     "ghost-logger": "^1.1.1",
     "joi": "^10.1.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
-    "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0",
     "winston": "^2.1.1",
     "winston-logentries": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chance": "^1.0.4npm ",
-    "ghost-express-server": "^1.0.14",
+    "ghost-express-server": "^2.0.1",
     "ghost-sequelize": "^1.0.2",
     "mocha": "^3.1.2",
     "mock-express-request": "^0.2.0",
